# summarum

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.ru.md  LICENSE  README.md  README.ru.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: gen-icon.ts
src/: extensions.ts  i18n.ts  main.ts  storage.ts  updater.ts  workspace.test.ts  workspace.ts
src-tauri/: Cargo.toml  extension-sample.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/engine/: datetime.ts  edge.test.ts  engine.test.ts  evaluator.ts  extraunits.ts  formatter.ts  index.ts  lexer.ts  parser.ts  rates-snapshot.json  registry.ts  tokenizer.ts  types.ts  unitdata.ts  vocab-data.ts  vocab.ts
src/ui/: app.css  editor.ts
